-
Bug
-
Resolution: Done
-
P1: Critical
-
5.14.0
-
None
-
-
4ad74c7615 (qt/qtdeviceutilities/5.15) 4ad74c7615 (qt/tqtc-qtdeviceutilities/5.15)
It is not possible to use
QList<TimezoneItem *> TimezoneModel::getModel()
TimezoneItem is declared as
class TimezoneItem : public QObject
while it should probably be
class Q_DECL_EXPORT TimezoneItem : public QObject
Code to reproduce
TimezoneModel timeZones;
for (TimezoneItem *item : timeZones.getModel())
{
qDebug() << item->name();
}