Export TimezoneItem

Currently TimezoneModel cannot be used as TimezoneItem symbols
are not exported.

Fixes: QTBUG-81929
Change-Id: I6d42aa1565d876d46fe3ba00519062e3a393ad29
Reviewed-by: Teemu Holappa <teemu.holappa@qt.io>